<resources>
    <string name="app_name">Pengelolaan Data Kendaraan Mobile</string>

    <string name="title_login">Sistem Informasi</string>
    <string name="title_login2">Pengelolaan Data Kendaraan</string>


    <string name="title_item_person">Profil</string>
    <string name="title_item_vehicle">Kendaraan</string>
    <string name="title_item_create">Peminjaman</string>
    <string name="title_item_driver">Sopir</string>
    <string name="title_item_user">User</string>

    <string name="title_profile">Profil</string>
    <string name="title_vehicle">Data Kendaraan</string>
    <string name="title_borrow">Data Peminjaman Kendaraan</string>
    <string name="title_driver">Data Sopir</string>
    <string name="title_user">Data User</string>

    <string name="vehicle_detail">Detail Kendaraan</string>
    <string name="vehicle_registration_number">Nomor Registrasi</string>
    <string name="vehicle_name">Nama</string>
    <string name="vehicle_name_vehicle">Nama Kendaraan</string>
    <string name="vehicle_merk">Merk</string>
    <string name="vehicle_police_number">Nomor Polisi</string>
    <string name="vehicle_is_borrow">Status Peminjaman</string>
    <string name="vehicle_chassis_number">Nomor Rangka</string>
    <string name="vehicle_machine_number">Nomor Mesin</string>
    <string name="vehicle_purchase_date">Tgl Beli (yyyy-mm-dd)</string>
    <string name="vehicle_value">Nilai Peroleh</string>
    <string name="vehicle_location">Lokasi</string>
    <string name="vehicle_condition">Kondisi</string>

    <string name="borrow_false">READY</string>
    <string name="borrow_true">DIPINJAM</string>

    <string name="button_update">Ubah</string>
    <string name="button_delete">Hapus</string>
    <string name="button_add">Tambah Data</string>
    <string name="button_update_action">Update Data</string>
    <string name="button_print">Cetak</string>

    <string name="content_description">TODO</string>

    <string name="input_vehicle">Input Data Kendaraan</string>
    <string name="edit_vehicle">Edit Data Kendaraan</string>

    <style name="BottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
    </style>

    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
        <item name="android:background">@color/transparent</item>
    </style>

    <string-array name="array_condition">
        <item>Kondisi</item>
        <item>Baik</item>
        <item>Rusak Ringan</item>
        <item>Rusak Berat</item>
        <item>Hilang</item>
    </string-array>

    <string-array name="array_borrow_status">
        <item>Status Peminjaman</item>
        <item>DIPINJAM</item>
        <item>DIKEMBALIKAN</item>
    </string-array>

    <!--  Bagian User  -->
    <string name="title_data_user">Data User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Ulangi Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="employee_number">Nomor Pokok Karyawan</string>
    <string name="employee_number2">NPK</string>
    <string name="position">Jabatan</string>
    <string name="work_unit">Unit Kerja</string>
    <string name="role_id">Role Id</string>

    <string-array name="array_role_id">
        <item>Role Id</item>
        <item>ADMIN</item>
        <item>KARYAWAN</item>
        <item>KABID</item>
    </string-array>

    <string name="detail_user">Detail User</string>
    <string name="input_user">Input Data User</string>
    <string name="edit_user">Edit Data User</string>

    <!--  End Bagian User  -->

    <!--  Bagian Driver  -->
    <string name="detail_driver">Detail Sopir</string>
    <string name="input_driver">Input Data Sopir</string>
    <string name="edit_driver">Edit Data Sopir</string>
    <string name="driver_id_driver">Id Sopir</string>
    <string name="driver_full_name">Nama Lengkap</string>
    <string name="driver_name">Nama Sopir</string>
    <string name="driver_phone_number">Nomor Handphone</string>
    <string name="driver_address">Alamat</string>
    <string name="driver_on_duty">Sedang Bertugas</string>
    <string name="driver_not_on_duty">Tidak Sedang Bertugas</string>
    <string name="driver_status">Status</string>

    <!--  End Bagian Driver-->

    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_edit_profile">Edit Profil</string>
    <string name="button_change_password">Ganti Password</string>
    <string name="new_password">Password Baru</string>
    <string name="repeat_new_password">Ulangi Password Baru</string>
    <string name="update_password">Update Password</string>

    <string name="detail_borrow">Detail Peminjaman Kendaraan</string>
    <string name="borrow_dinas">Perjalanan Dinas</string>
    <string name="borrow_personal">Keperluan Pribadi</string>
    <string name="date_of_filling">Tanggal Pengajuan</string>
    <string name="necessity">Keperluan</string>
    <string name="destination">Tujuan</string>
    <string name="borrow_date">Tanggal Pinjam / Perjalanan</string>
    <string name="borrow_date2">Tanggal Pinjam</string>
    <string name="return_date">Tanggal Kembali</string>

    <string name="title_select_vehicle">Silahkan Pilih Kendaraan</string>
    <string name="title_select_driver">Silahkan Pilih Sopir</string>
    <string name="title_input_borrow">Input Data Peminjaman Kendaraan</string>
    <string name="title_edit_borrow">Edit Data Peminjaman Kendaraan</string>
    <string name="sub_title_select_borrow_user">Detail Peminjam</string>
    <string name="sub_title_select_vehicle">Kendaraan Yang Dipilih</string>
    <string name="sub_title_select_driver">Driver Yang Dipilih</string>
    <string name="sub_title_input_borrow">Input Data Lainnya</string>
    <string name="id_borrow">Id Borrow</string>
    <string name="save">Simpan</string>


    <string name="borrow_dinas_report">Laporan Perjalanan Dinas</string>
    <string name="borrow_personal_report">Laporan Keperluan Pribadi</string>
    <string name="month">Bulan (mm)</string>
    <string name="year">Tahun (yyyy)</string>


</resources>