<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_person"
        android:title="@string/title_item_person"
        android:icon="@drawable/ic_person"/>

    <item
        android:id="@+id/item_vehicle"
        android:title="@string/title_item_vehicle"
        android:icon="@drawable/ic_vehicle"/>

    <item
        android:id="@+id/item_create"
        android:title="@string/title_item_create"
        android:icon="@drawable/ic_pen"/>

    <item
        android:id="@+id/item_driver"
        android:title="@string/title_item_driver"
        android:icon="@drawable/ic_driver"/>

    <item
        android:id="@+id/item_user"
        android:title="@string/title_item_user"
        android:icon="@drawable/ic_user"/>

</menu>