<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:layout_margin="5dp"
    android:clickable="true"
    android:id="@+id/card_select_vehicle_personal"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_vehicle"
            android:layout_gravity="center"
            app:tint="@color/purple_500"
            android:contentDescription="@string/content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_select_vehicle_registration_number_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/vehicle_registration_number"/>

            <TextView
                android:id="@+id/card_select_vehicle_name_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_name"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/card_select_vehicle_merk_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_merk"/>

            <TextView
                android:id="@+id/card_select_vehicle_police_number_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_police_number"/>

            <TextView
                android:id="@+id/card_select_vehicle_is_borrow_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_is_borrow"
                android:textColor="@color/purple_500"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>