<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_borrow_vehicle"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="20dp">

    <TextView
        android:id="@+id/user_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_borrow"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/purple_500"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_number2"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_name_vehicle"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_merk"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_police_number"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_driver_full_name_borrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_driver_phone_number_borrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_phone_number"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_filling"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/necessity"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrow_date2"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_date"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_is_borrow"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_full_name_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_user_employee_number_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_number2"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_user_position_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_vehicle_name_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_name_vehicle"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_vehicle_merk_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_merk"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_vehicle_police_number_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_police_number"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_driver_full_name_borrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_driver_phone_number_borrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_phone_number"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_borrow_date_of_filling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_filling"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_borrow_necessity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/necessity"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_borrow_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrow_date2"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_borrow_return_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_date"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_borrow_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv_borrow_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_is_borrow"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_update"/>

    <Button
        android:id="@+id/button_delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/button_delete"/>

</LinearLayout>